5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1798_2564.log
== TEST (2019-06-05 15:49:12) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

while 
for i in range(size(V)):
	if (g[i] > a[i]):
		v = v + 1
	elif (g[i] == a[i]):
		e = e + 1
	elif (g[i] < a[i]):
		d = d + 1

		
	 
		
		
	
		
		



-- ERROR:
File "XXXX", line 10
    while 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:51:24) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

while (size(v) > 1):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
		elif (g[i] == a[i]):
			e = e + 1
		elif (g[i] < a[i]):
			d = d + 1
V
	print()
		
	 
		
		
	
		
		



-- ERROR:
File "XXXX", line 19
    print()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:21:46) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

while (size(v) > 1):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
		elif (g[i] == a[i]):
			e = e + 1
		elif (g[i] < a[i]):
			d = d + 1
	print(V[v,e,d])
		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:23:25) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

while (i < size(v)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
		elif (g[i] == a[i]):
			e = e + 1
		elif (g[i] < a[i]):
			d = d + 1
	print(V[v,e,d])
		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:24:20) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

while (i < size(g)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
		elif (g[i] == a[i]):
			e = e + 1
		elif (g[i] < a[i]):
			d = d + 1
	print(V[v,e,d])
		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:25:05) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

while (1 < size(g)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
		elif (g[i] == a[i]):
			e = e + 1
		elif (g[i] < a[i]):
			d = d + 1
	print(V[v,e,d])
		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:36:27) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

while (1 < size(g)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
		elif (g[i] == a[i]):
			e = e + 1
		elif (g[i] < a[i]):
			d = d + 1
	print(V[v+e+d])

		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:37:36) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

while (1 < size(g)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
		elif (g[i] == a[i]):
			e = e + 1
		elif (g[i] < a[i]):
			d = d + 1
	print(V[v,e,d])

		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:42:07) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

while (1 < size(g)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
			V[0] = V[0] + v
		elif (g[i] == a[i]):
			e = e + 1
			V[1] = V[1] + e
		elif (g[i] < a[i]):
			d = d + 1
			V[2] = V[2] + d
	print(V)
		
	print()

		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:43:30) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0
e = 0
d = 0
V = zeros(3, dtype=int)

while (1 < size(g)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
			V[0] = V[0] + v
		elif (g[i] == a[i]):
			e = e + 1
			V[1] = V[1] + e
		elif (g[i] < a[i]):
			d = d + 1
			V[2] = V[2] + d
	print(V)
		
	print()

		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:45:46) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

i = 0 #contadora no while
v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

while (i < size(g)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
			V[0] = V[0] + v
		elif (g[i] == a[i]):
			e = e + 1
			V[1] = V[1] + e
		elif (g[i] < a[i]):
			d = d + 1
			V[2] = V[2] + d
	i = i + 1
print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:46:22) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

i = 0 #contadora no while
v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

while (i < size(g)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
			V[0] = V[0] + v
		elif (g[i] == a[i]):
			e = e + 1
			V[1] = V[1] + e
		elif (g[i] < a[i]):
			d = d + 1
			V[2] = V[2] + d
	i = i + 1
print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:46:28) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

i = 0 #contadora no while
v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

while (i < size(g)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
			V[0] = V[0] + v
		elif (g[i] == a[i]):
			e = e + 1
			V[1] = V[1] + e
		elif (g[i] < a[i]):
			d = d + 1
			V[2] = V[2] + d
	i = i + 1
   print(V)


		
	 
		
		
	
		
		



-- ERROR:
File "XXXX", line 23
    print(V)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:46:40) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

i = 0 #contadora no while
v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

while (i < size(g)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
			V[0] = V[0] + v
		elif (g[i] == a[i]):
			e = e + 1
			V[1] = V[1] + e
		elif (g[i] < a[i]):
			d = d + 1
			V[2] = V[2] + d
	i = i + 1
	print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:47:10) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

i = 0 #contadora no while
v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

while (i < size(g)):
	for i in range(size(V)):
		if (g[i] > a[i]):
			v = v + 1
			V[0] = V[0] + v
		elif (g[i] == a[i]):
			e = e + 1
			V[1] = V[1] + e
		elif (g[i] < a[i]):
			d = d + 1
			V[2] = V[2] + d
	i = i + 1
	print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:48:14) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

i = 0 #contadora no while
v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

for i in range(size(V)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = V[0] + v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = V[1] + e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = V[2] + d
print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:51:01) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

i = 0 #contadora no while
v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

for i in range(size(V)):
	if (g[i] > a[i]):
		v = v + 1
		V[1] = V[1] + v
	elif (g[i] == a[i]):
		e = e + 1
		V[2] = V[2] + e
	elif (g[i] < a[i]):
		d = d + 1
		V[3] = V[3] + d
print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:51:44) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

for i in range(size(V)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = V[0] + v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = V[1] + e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = V[2] + d
print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:53:23) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = V[0] + v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = V[1] + e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = V[2] + d
print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:54:58) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

for i in size(g):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = V[0] + v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = V[1] + e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = V[2] + d
print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 09:55:29) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

for i in g:
	if (g[i] > a[i]):
		v = v + 1
		V[0] = V[0] + v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = V[1] + e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = V[2] + d
print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 10:00:25) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = V[0] + v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = V[1] + e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = V[2] + d
print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 10:01:07) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)


		
	 
		
		
	
		
		



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 10:01:30) 
-- CODE:
from numpy import*
g = array(eval(input("Gols: ")))
a = array(eval(input("Gols adversarios: ")))

v = 0 #vitorias
e = 0 #empates
d = 0 #derrotas
V = zeros(3, dtype=int)

for i in range(size(g)):
	if (g[i] > a[i]):
		v = v + 1
		V[0] = v
	elif (g[i] == a[i]):
		e = e + 1
		V[1] = e
	elif (g[i] < a[i]):
		d = d + 1
		V[2] = d
print(V)


		
	 
		
		
	
		
		



-- EXECUTION TIME:
1.1805
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
